--- a/bharat.html
+++ b/bharat.html
@@ -12,7 +12,8 @@
   <u> <h1>Heading 1</h1></u>
   <i><h2>Heading 2</h2></i> 
    <h3 style="background-color: aquamarine; height: 200px  border 2px solid red
-   ;">Heading 3</h3>
+   ;"
+    <h3>Heading 4</h3>
    <h4>Heading 4</h4>
    <h5>Heading 5</h5>
    <h6>Heading 6</h6>
@@ -21,7 +22,16 @@
 <a href="github.com/">git hub</a>
 <br/>
 <a href="https://chromewebstore.google.com/">chrome webstore</a>
+<br>
+<a href="/advance/bharat.html">Go to bharat</a>
 
-<p>this is bharat</p>
+<img src="https://cdn.fcglcdn.com/brainbees/images/products/5000x70
+20/15375996a.webp" alt="toy" height="100">
+
+<img src="image.jpeg" alt="toy"height="1000"width="50">
+<br>
+<b>Bold</b>
+<br>
+<i>italic</i>
 </body>
 </html>
